[package]
name = "wasm-dev-image"
version = "0.1.0"
authors = ["nashaofu <diaocheng@outlook.com>"]
edition = "2018"
description = "A WebAssembly wrapper for image-rs"
repository = "https://github.com/wasm-dev/image.git"
license-file = "LICENSE"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
image = "0.24.7"
web-sys = { version = "0.3.64", features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
    'console',
] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
